# outline-apps

./: .action_cache.json  .bowerrc  .browserslist  .browserslistrc  .clang-format  .clang-format-ignore  .commitlintrc  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc.js  .prettierrc.json  .stylelintrc  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  Taskfile.yml  bower.json  capacitor.config.json  clean.action.sh  codecov.yml  commitlint.config.js  config.xml  docker-compose.yml  docker.env  go.mod  go.sum  gulp.action.sh  gulpfile.esm.js  gulpfile.js  jasmine.json  keys.keystore.enc  keystore.p12.enc  list.action.mjs  (+14 more)
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  build-issue.md  build_issue.md  config.yml  feature_request.md  feature_request.yml  question.md  support_request.md
.github/actions/: Dockerfile
.github/scripts/: android_setup_ci.sh  android_tools_versions.sh
.github/workflows/: build.yml  build_and_test.yml  build_and_test_debug.yml  build_and_test_debug_client.yml  build_and_test_debug_manager.yml  build_and_test_tun2socks.yml  build_client_android_release_candidate.yml  build_client_linux_release_candidate.yml  build_release_candidates.yml  build_windows_release_candidate.yml  bulid_release_candidates.yml  codeql.yml  development.yml  license.yml  lint.yml  linux_prerelease.yml  production.yml  publish_client_android_release_candidate.yml  publish_client_linux_release_candidate.yml  publish_linux_release_candidate.yml  pull_request_checks.yml  release_candidate_linux.yml  release_linux.yml  test.yml  test_infrastructure.yml  unsafe_build_and_test_debug.yml
.storybook/: main.js  preview-head.html  preview.js
android/: capacitor.settings.gradle
android/app/: build.gradle
apple/: build.action.sh
beta/: build-extras.gradle  build.gradle  configure_android_beta.js  google-services.json
client/: .browserslist  .browserslistrc  .gitignore  .glf.json  AGENTS.md  README.md  Taskfile.yml  config.md  config.xml  lit-localize.json  package-lock.json  package.json  tsconfig.json
client/tools/outline_proxy_controller/: CMakeLists.txt  build.action.sh  logger.cpp  logger.h  outline_controller_server.h  outline_error.h
cordova-plugin-outline/: .gitignore  README.md  outlinePlugin.js  package.json  plugin.xml  third_party
docs/: android-development.md  android_development.md  apple-development.md  apple_development.md  electron_development.md  invitation-instructions.md  invitation_instructions.md  invitation_instructions_ru.md  life-of-a-packet.md  life_of_a_packet.md  localization.md
electron/: add_tap_device.bat  build_action.sh  connection_store.ts  custom_install_steps.nsh  custom_install_steps_linux.sh  index.ts  install_windows_service.bat  package_action.sh  process_manager.ts  release_action.sh  routing_service.ts  run_action.sh  sentry_logger.ts
infrastructure/: AGENTS.md  build.action.sh  crypto.ts  hex_encoding.ts  i18n.spec.ts  i18n.ts  index.ts  karma.conf.js  memory_storage.ts  net.spec.ts  net.ts  package-lock.json  package.json  path_api.spec.ts  path_api.ts  sentry.spec.ts  sleep.ts  test.action.sh  test.webpack.js  timeout_promise.ts  tsconfig.json  tsconfig.prod.json  value_stream.spec.ts  value_stream.ts
outline_client/: .browserslistrc  .eslintrc.json  .gitignore  README.md  commitlint.config.js  list.action.mjs  package-lock.json  package.json  tsconfig.json
resources/: master_messages.json  original_messages.json
scripts/: do_action.sh  environment_json.mjs  environment_json.sh  generate_rtl_css.js  get_build_environment.mjs  get_build_number.mjs  get_build_parameters.mjs  get_changed_filepaths.mjs  get_cordova_build_parameters.mjs  get_electron_build_flags.mjs  get_root_dir.mjs  get_tag.sh  get_version.mjs  get_webpack_build_mode.mjs  get_webpack_mode.mjs  jsign.mjs  root_dir.mjs  rtl_css_webpack.js  run_action.mjs  run_action.sh  semantic_version.sh  sign_windows_executable.js  tag.sh  test.action.sh  test_action.sh  update_android_target_version.js  update_android_target_version.sh
server_install_scripts/: build.action.sh  build_do_install_script_ts.node.js  build_gcp_install_script_ts.node.js  do_install_server.sh  index.js  install_server.sh  package.json
server_manager/: .glf.json  AGENTS.md  README.md  base.webpack.js  browser.webpack.js  css-in-js-rtl-loader.js  electron.vite.config.js  electron_and_karma_chromium.spec.ts  electron_main.webpack.mjs  electron_preload.webpack.mjs  electron_renderer.webpack.js  gallery.webpack.js  index.html  package-lock.json  package.json  test.action.sh  tsconfig.json
src/: clean.action.mjs  clean.action.sh  format.action.mjs  format.action.sh  gulp.action.mjs  gulp.action.sh  index.ts  lint.action.mjs  lint.action.sh  list.action.mjs  reset.action.sh  tsconfig.json
tools/outline_proxy_controller/: .gitignore  CMakeLists.txt  Dockerfile  OutlineProxyControllerConfig.h  OutlineProxyControllerConfig.h.in  README.md  build.action.sh  build_action.sh  logger.cpp  logger.h  network_monitor.cpp  outline_controller_server.cpp  outline_controller_server.h  outline_daemon.cpp  outline_error.cpp  outline_error.h  outline_proxy_controller.cpp  outline_proxy_controller.h
tools/outline_proxy_controller/init/: outline_proxy_controller.service
tools/outline_proxy_controller/tests/: catch.hpp  outline_proxy_controller_tester.cpp
www/: cordova_index.html  electron_index.html  environment.json  index.html  start.action.mjs  style.css  test.action.mjs  tsconfig.json  webpack_base.mjs
(+2632 files in other folders)
